--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestione_prenotazioni
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog_post_user
 spring.datasource.username=postgres
 spring.datasource.password=Monfalcone3
 spring.datasource.driver-class-name=org.postgresql.Driver
