feat: handlerException,Cloudinary, Validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=Monfalcone3
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=update
+
+cloudinary.cloud_name = dgbjfinsv
+cloudinary.api_key =922376212593163
+cloudinary.api_secret = ZCU1S7KWjhOi4cOEKVCktZuLrjE
